--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Your free landing page</title>
+    <title>Booking flowers</title>
     <meta name="description" content="A pure client-side landing page template that you can freely fork, customize, host and link to your own domain name (e.g. using Github Pages). Relies on Mailchimp (for user email subscriptions) and Google Analytics (for stats)." property="description">
     <meta name="keywords" content="landing page, free, product page, startup, github, template, boilerplate" property="keywords">
     <meta name="viewport" content="width=device-width, initial-scale=1" property="viewport">
@@ -24,14 +24,14 @@
               <div class="container-fluid rel">
                 <div class="row">
                   <div class="user-signup__intro">
-                    <h1 style="text-align: center;">Your free landing page</h1>
+                    <h1 style="text-align: center;">Booking flowers</h1>
                     <p style="text-align: center;">
                       <img src="/res/spacer.png" alt="" class="spacer insert--image wrap-off-align-center"><br>
                     </p>
-                    <p style="text-align: center;">Would you like a free landing page like this one for your upcoming startup product?</p>
+                    <p style="text-align: center;">Vuoi che il nostro fiorista curi la tomba del tuo caro e consegni bouquet di fiori freschi?</p>
                     <p style="text-align: center;">
                       <img src="/res/clean-hr.png" alt="" class="clean-hr insert--image wrap-off-align-center">
-                      <span style="font-size: 14px;">Enter your email address if you don't want to do it yourself:</span>
+                      <span style="font-size: 14px;">Il nostro servizio sarà presto disponibile nella tua città, inserisci la tua mail per essere avvisato appena disponibile:</span>
                     </p>
                   </div>
                 </div>
@@ -45,7 +45,7 @@
                       </div>
                       <div class="mt-td--centered-vertical user-signup__col-2">
                         <div class="user-signup__form-group m-lg-v form-group text-center">
-                          <button type="submit" class="btn btn-default submit user-signup__submit"><span>SUBMIT</span></button>
+                          <button type="submit" class="btn btn-default submit user-signup__submit"><span>AVVISAMI</span></button>
                         </div>
                       </div>
                     </div>
