--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Booking flowers</title>
-    <meta name="description" content="A pure client-side landing page template that you can freely fork, customize, host and link to your own domain name (e.g. using Github Pages). Relies on Mailchimp (for user email subscriptions) and Google Analytics (for stats)." property="description">
-    <meta name="keywords" content="landing page, free, product page, startup, github, template, boilerplate" property="keywords">
+    <meta name="description" content="Vuoi che il nostro fiorista curi la tomba del tuo caro e consegni bouquet di fiori freschi? Iscriviti alla preview e ottieni un buono sconto." property="description">
+    <meta name="keywords" content="Booking flowers, fiorista, fiori, tomba, cimitero, servizio, abbonamento" property="keywords">
     <meta name="viewport" content="width=device-width, initial-scale=1" property="viewport">
-    <meta name="og:title" content="Fork to get your free landing page" property="og:title">
-    <meta name="og:description" content="A pure client-side landing page template that you can freely fork, customize, host and link to your own domain name (e.g. using Github Pages). Relies on Mailchimp (for user email subscriptions) and Google Analytics (for stats)." property="og:description">
+    <meta name="og:title" content="Booking flowers" property="og:title">
+    <meta name="og:description" content="Vuoi che il nostro fiorista curi la tomba del tuo caro e consegni bouquet di fiori freschi? Iscriviti alla preview e ottieni un buono sconto." property="og:description">
     <meta name="og:image" content="" property="og:image">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" type="image/png" href="./res/image.png" />
     <link type="text/css" rel="stylesheet" href="./res/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="./res/styles.css">
 <!-- Global site tag (gtag.js) - Google Analytics -->
