--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="og:title" content="Booking flowers" property="og:title">
     <meta name="og:description" content="Vuoi che il nostro fiorista curi la tomba del tuo caro e consegni bouquet di fiori freschi? Iscriviti alla preview e ottieni un buono sconto." property="og:description">
     <meta name="og:image" content="" property="og:image">
-    <link rel="icon" type="image/png" href="./res/image.png" />
+    <link rel="icon" type="image/png" href="./res/forgetmenot.png" />
     <link type="text/css" rel="stylesheet" href="./res/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="./res/styles.css">
 <!-- Global site tag (gtag.js) - Google Analytics -->
