--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <p style="text-align: center;">Vuoi che il nostro fiorista curi la tomba del tuo caro e consegni bouquet di fiori freschi?</p>
                     <p style="text-align: center;">
                       <img src="/res/clean-hr.png" alt="" class="clean-hr insert--image wrap-off-align-center">
-                      <span style="font-size: 14px;">Il nostro servizio sarà presto disponibile nella tua città, inserisci la tua mail per essere avvisato appena disponibile:</span>
+                      <span style="font-size: 14px;">Il nostro servizio sarà presto disponibile nella tua città, inserisci la tua mail per ottenere uno sconto del 10% subito!</span>
                     </p>
                   </div>
                 </div>
