--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <p style="text-align: center;">
                       <img src="/res/spacer.png" alt="" class="spacer insert--image wrap-off-align-center"><br>
                     </p>
-                    <p style="text-align: center;">Vuoi che il nostro fiorista curi la tomba del tuo caro e consegni bouquet di fiori freschi 1 o 2 volte al mese?</p>
+                    <p style="text-align: center;">Vuoi che il nostro fiorista curi la tomba del tuo caro e consegni bouquet di fiori freschi?</p>
                     <p style="text-align: center;">
                       <img src="/res/clean-hr.png" alt="" class="clean-hr insert--image wrap-off-align-center">
                       <span style="font-size: 14px;">Il nostro servizio sarà presto disponibile nella tua città, inserisci la tua mail per ottenere uno sconto del 10% subito!</span>
