--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div id="loading" class="loading-state" style="display: none;"></div>
       <div>
         <section>
-          <div class="floating-signup__wrap col-xs-12 col-md-6 col-xs-offset-0 col-md-offset-3 floaty-vertical--middle floaty-horizontal--center floaty-unfloat-at--xs">
+          <div class="floating-signup__wrap col-xs-12 col-md-6 col-xs-offset-0 col-md-offset-3 floaty-vertical--middle floaty-horizontal--center">
             <div class="floating-signup rel">
               <div class="container-fluid rel">
                 <div class="row">
