--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
                     <p style="text-align: center;">Vuoi che il nostro fiorista curi la tomba del tuo caro e consegni bouquet di fiori freschi?</p>
                     <p style="text-align: center;">
                       <img src="/res/clean-hr.png" alt="" class="clean-hr insert--image wrap-off-align-center">
-                      <span style="font-size: 14px;">Il nostro servizio sarà presto disponibile nella tua città, inserisci la tua mail per ottenere uno sconto del 10% subito!</span>
+                      <span style="font-size: 14px;">Il nostro servizio sarà presto disponibile nella tua città, inserisci la tua mail per ottenere subito uno sconto del 10%!</span>
                     </p>
                   </div>
                 </div>
                 <div class="row">
-                  <form class="form form-horizontal user-signup__form" name="form" novalidate="" action="https://gmail.us7.list-manage.com/subscribe/post?u=dfc967709c97ce391a7d52b54&amp;id=2ffb3d7900" method="POST">
+                  <form class="form form-horizontal user-signup__form" name="form" action="https://gmail.us7.list-manage.com/subscribe/post?u=dfc967709c97ce391a7d52b54&amp;id=2ffb3d7900" method="POST">
                     <div class="mt-table--full">
                       <div class="mt-td--centered-vertical user-signup__col-1">
                         <div class="user-signup__form-group m-lg-v form-group col-sm-12">
