--- a/index.html
+++ b/index.html
@@ -38,10 +38,13 @@
                     <p style="text-align: center;">
                       <img src="/res/spacer.png" alt="" class="spacer insert--image wrap-off-align-center"><br>
                     </p>
-                    <p style="text-align: center;">Vuoi che il nostro fiorista curi la tomba del tuo caro e consegni bouquet di fiori freschi?</p>
+                    <p style="text-align: center;">Il nuovo servizio di consegna fiori al cimitero direttamente sulle tombe delle persone a te care.</p>
+                    <p style="text-align: center;">Booking flowers assicura il tuo mazzo in caso di furto.</p>
+                    <p style="text-align: center;">A partire da 10 euro.</p>
                     <p style="text-align: center;">
                       <img src="/res/clean-hr.png" alt="" class="clean-hr insert--image wrap-off-align-center">
-                      <span style="font-size: 14px;">Il nostro servizio sarà presto disponibile nella tua città, inserisci la tua mail per ottenere subito uno sconto del 10%!</span>
+                      <span style="font-size: 14px;">Il nostro servizio sarà presto disponibile nella tua città.<br />
+                        Inserisci la tua mail per essere avvisato nonappena sarà disponibile e ottenere subito uno sconto del 10%!</span>
                     </p>
                   </div>
                 </div>
