--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                       <img src="/res/spacer.png" alt="" class="spacer insert--image wrap-off-align-center"><br>
                     </p>
                     <p style="text-align: center;">Il nuovo servizio di consegna fiori al cimitero direttamente sulle tombe delle persone a te care.</p>
-                    <p style="text-align: center;">Booking flowers assicura il tuo mazzo in caso di furto.</p>
-                    <p style="text-align: center;">A partire da 10 euro.</p>
+                    <p style="text-align: center;font-size: 14px;">Booking flowers assicura il tuo mazzo in caso di furto.</p>
+                    <p style="text-align: center;font-size: 14px;">A partire da 10 euro.</p>
                     <p style="text-align: center;">
                       <img src="/res/clean-hr.png" alt="" class="clean-hr insert--image wrap-off-align-center">
                       <span style="font-size: 14px;">Il nostro servizio sarà presto disponibile nella tua città.<br />
@@ -53,12 +53,20 @@
                     <div class="mt-table--full">
                       <div class="mt-td--centered-vertical user-signup__col-1">
                         <div class="user-signup__form-group m-lg-v form-group col-sm-12">
-                          <input type="email" name="EMAIL" class="form-control form-control__input user-signup__email" pattern="/^[a-zA-Z0-9+-_]+(\.[_a-zA-Z0-9+]+)*@[a-zA-Z0-9+-_]+(\.[a-zA-Z0-9+-_]+)*(\.[a-zA-Z]+)$/" placeholder="Email" aria-required="true" required="required">
-                        </div>        
+                          <input type="email" name="EMAIL" class="form-control form-control__input user-signup__email" pattern="/^[a-zA-Z0-9+-_]+(\.[_a-zA-Z0-9+]+)*@[a-zA-Z0-9+-_]+(\.[a-zA-Z0-9+-_]+)*(\.[a-zA-Z]+)$/" placeholder="E-mail" aria-required="true" required="required">
+                        </div>
                       </div>
                       <div class="mt-td--centered-vertical user-signup__col-2">
                         <div class="user-signup__form-group m-lg-v form-group text-center">
                           <button type="submit" class="btn btn-default submit user-signup__submit"><span>AVVISAMI</span></button>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="mt-table--full">
+                      <div class="mt-td--centered-vertical user-signup__col-1">
+                        <div class="user-signup__form-group m-lg-v form-group col-sm-12">
+                          <input type="checkbox" name="PRIVACY" class="form-control form-control__input user-signup__email" aria-required="true" required="required">
+                          Accetto la <a href="">privacy policy</a>
                         </div>
                       </div>
                     </div>
