--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                     </div>
                     <div class="mt-table--full">
                       <div class="mt-td--centered-vertical user-signup__col-1">
-                        <div class="user-signup__form-group m-lg-v form-group col-sm-12">
-                          <input type="checkbox" name="PRIVACY" class="form-control form-control__input user-signup__email" aria-required="true" required="required">
+                        <div class="user-signup__form-group form-group col-sm-12">
+                          <input type="checkbox" name="PRIVACY" aria-required="true" required="required">
                           Accetto la <a href="">privacy policy</a>
                         </div>
                       </div>
