--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                       <div class="mt-td--centered-vertical user-signup__col-1">
                         <div class="user-signup__form-group form-group col-sm-12">
                           <input type="checkbox" name="PRIVACY" aria-required="true" required="required">
-                          Accetto la <a href="">privacy policy</a>
+                          Accetto la <a href="./privacy.html" target="_blank">privacy policy</a>
                         </div>
                       </div>
                     </div>
