--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </p>
                     <p style="text-align: center;">Il nuovo servizio di consegna fiori al cimitero direttamente sulle tombe delle persone a te care.</p>
                     <p style="text-align: center;font-size: 14px;">Booking flowers assicura il tuo mazzo in caso di furto.</p>
-                    <p style="text-align: center;font-size: 14px;">A partire da 10 euro.</p>
+                    <p style="text-align: center;font-size: 14px;">Servizio a partire da 10 euro.</p>
                     <p style="text-align: center;">
                       <img src="/res/clean-hr.png" alt="" class="clean-hr insert--image wrap-off-align-center">
                       <span style="font-size: 14px;">Il nostro servizio sarà presto disponibile nella tua città.<br />
