--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <div class="container-fluid rel">
                 <div class="row">
                   <div class="user-signup__intro">
-                    <img src="res/forgetmenot.png" style="margin: auto;display: block;width: 80px;">
+                    <img src="res/forgetmenot.png" style="margin: auto;display: block;width: 80px;" class="hidden-xs">
                     <h1 style="text-align: center;">Booking flowers</h1>
                     <p style="text-align: center;">
                       <img src="/res/spacer.png" alt="" class="spacer insert--image wrap-off-align-center"><br>
