--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 
   gtag('config', 'G-W04DJ9K16Z');
   gtag('config', 'AW-401884867');
+  
+  function trackConversion() {
+    gtag('event', 'conversion', {'send_to': 'AW-401884867/cir6COSB5_sBEMON0b8B'});
+    return true;
+  }
 </script>
   </head>
   <body>
@@ -59,7 +64,7 @@
                       </div>
                       <div class="mt-td--centered-vertical user-signup__col-2">
                         <div class="user-signup__form-group m-lg-v form-group text-center">
-                          <button type="submit" class="btn btn-default submit user-signup__submit" onsubit="gtag('event', 'conversion', {'send_to': 'AW-401884867/cir6COSB5_sBEMON0b8B'});"><span>AVVISAMI</span></button>
+                          <button type="submit" class="btn btn-default submit user-signup__submit" onsubit="return trackConversion();"><span>AVVISAMI</span></button>
                         </div>
                       </div>
                     </div>
