--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   </div>
                 </div>
                 <div class="row">
-                  <form class="form form-horizontal user-signup__form" name="form" action="https://gmail.us7.list-manage.com/subscribe/post?u=dfc967709c97ce391a7d52b54&amp;id=2ffb3d7900" method="POST" onsubit="return trackConversion();">
+                  <form class="form form-horizontal user-signup__form" name="form" action="https://gmail.us7.list-manage.com/subscribe/post?u=dfc967709c97ce391a7d52b54&amp;id=2ffb3d7900" method="POST" onsubmit="return trackConversion();">
                     <div class="mt-table--full">
                       <div class="mt-td--centered-vertical user-signup__col-1">
                         <div class="user-signup__form-group m-lg-v form-group col-sm-12">
